--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,12 +2,12 @@
 import Layout from '@layouts/Layout.astro'
 import Intro from '@components/about/Intro.astro'
 
-const title = 'About-Kalyan Jyoti Borah'
-const description = "About Kalyan Jyoti Borah"
+const title = 'About - Kalyan Jyoti Borah'
+const description = 'About Kalyan Jyoti Borah'
 const permalink = ''
 const ograph = ''
 ---
 
 <Layout {title} {description} {permalink} {ograph}>
- <Intro/>
+  <Intro />
 </Layout>
