'small skills badges for mobile'

--- a/src/components/home/ShortIntro.astro
+++ b/src/components/home/ShortIntro.astro
@@ -1,4 +1,5 @@
 ---
+
 ---
 
 <section id="about" class="font-display">
@@ -38,9 +39,10 @@
       <div class="flex justify-left">
         <a
           href="/about/"
-          class="border decoration-purple-50 border-blue-500 px-2 py-3 rounded-xl"
+          class="border decoration-purple-50 border-blue-500 px-1 py-2 sm:px-2 sm:py-3 rounded-xl"
         >
           <i class="fa-regular fa-circle-user"></i>
+          {' '}
           <span>More About Me</span>
         </a>
       </div>
