Add Google Tag Manager and gtag.js scripts
Integrated Google Tag Manager and gtag.js scripts to various layout components and index pages. The addition enables tracking, better analytics, and website optimization through Google's suite of tools.

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,6 +10,10 @@ export interface Props extends BaseHeadProps {}
 <html lang="en">
   <BaseHead {...Astro.props} />
   <body>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P3ZGF3GZ"
+                    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
     <Header />
     <main>
       <slot />
