--- a/src/components/common/Header.astro
+++ b/src/components/common/Header.astro
@@ -1,42 +1,56 @@
 ---
-import Socials from './Socials.astro'
-import socials from '@data/socials.json'
+import socials from '@data/socials.json';
+import { Image } from 'astro:assets';
+import Socials from './Socials.astro';
 ---
 
-<div class="nav z-[100] fixed top-0 min-w-full max-w-full p-4 sm:p-2">
-  <header class="flex items-center w-full justify-center md:justify-around">
-    <div class="w-fit hidden sm:inline-block my-4">
+<header
+  class='nav z-[100] fixed flex items-center top-0 min-w-full max-w-full p-4 sm:p-2'
+>
+  <nav class='flex items-center w-full justify-center md:justify-around'>
+    <div class='w-fit hidden sm:inline-block my-4'>
       <Socials {socials} />
     </div>
-    <div class="grow md:grow-0"></div>
-    <a href="/" class="animate-pulse">
-      <img class="st" src="/icons8/icons8-skull-gradient-32.png" alt="Logo" />
+    <div class='grow md:grow-0'></div>
+    <a
+      href='/'
+      class='animate-pulse'
+    >
+      <Image
+        height={'32'}
+        width={'32'}
+        class='st'
+        src='/icons8/icons8-skull-gradient-32.png'
+        alt='Logo'
+      />
     </a>
 
-    <div class="grow sm:grow-0"></div>
+    <div class='grow sm:grow-0'></div>
     <nav
-      class="max-w-full w-fit flex font-display md:gap-3 md:justify-between items-center"
+      class='max-w-full w-fit flex font-display md:gap-3 md:justify-between items-center'
     >
-      <ul class="flex gap-3 font-normal sm:items-center">
-        <li class="text-gray-400 hover:text-gray-100 delay-150">
-          <a href="/about/">about</a>
+      <ul class='flex gap-3 font-normal sm:items-center'>
+        <li class='text-gray-400 hover:text-gray-100 delay-150'>
+          <a href='/about/'>about</a>
         </li>
-        <li class="text-gray-400 hover:text-gray-100 delay-150">
-          <a href="/works/">works</a>
+        <li class='text-gray-400 hover:text-gray-100 delay-150'>
+          <a href='/works/'>works</a>
         </li>
-        <li class="text-gray-400 hover:text-gray-100 delay-150">
-          <a href="#contact">contact</a>
+        <li class='text-gray-400 hover:text-gray-100 delay-150'>
+          <a href='#contact'>contact</a>
         </li>
-        <li class="grow sm:grow-0"></li>
+        <li class='grow sm:grow-0'></li>
         <li>
           <a
-            class="hover:animate-pulse outline outline-2 outline-blue-500 rounded-full py-1 px-2 md:py-2 md:px-4 md:ml-3 cursor-pointer flex gap-2 items-center"
-            href="/resume/"
+            download='https://onedrive.live.com/?authkey=%21AOzfYmK8sZ6QPWQ&id=89A7470C9D85D813%211031&cid=89A7470C9D85D813&parId=root&parQt=sharedby&o=OneUp'
+            class='hover:animate-pulse outline outline-2 outline-blue-500 rounded-full py-1 px-2 md:py-2 md:px-4 md:ml-3 cursor-pointer flex gap-2 items-center'
+            target='_blank'
+            href='https://onedrive.live.com/?authkey=%21AOzfYmK8sZ6QPWQ&id=89A7470C9D85D813%211031&cid=89A7470C9D85D813&parId=root&parQt=sharedby&o=OneUp'
           >
-            <i class="fa-regular fa-file-pdf fa-shake"></i>Resume</a
+            <i class='fa-regular fa-file-pdf fa-shake'></i>Resume</a
           >
         </li>
       </ul>
     </nav>
-  </header>
-</div>
+  </nav>
+</header>
