--- a/src/components/common/Socials.astro
+++ b/src/components/common/Socials.astro
@@ -1,5 +1,5 @@
 ---
-import type { Social } from "../../scripts/types";
+import type { Social } from "../../scripts/types"
 interface Props {
   socials: Social[];
 }
@@ -11,7 +11,7 @@ const { socials } = Astro.props;
     {
       socials.map((social):Social => (
         <li title={social.name}>
-          <a href={social.url} target="_blank" class='social-link hover:animate-spin'>
+          <a href={social.url} aria-label={`${social.name} link`}target="_blank" class='social-link hover:animate-spin'>
             <i class=`text-zinc-400 hover:text-white fa-brands fa-${social.logo} fa-lg`/>
           </a>
         </li>
