--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,44 +1,53 @@
 ---
-import Layout from '@layouts/Layout.astro'
-import ShortIntro from '@components/home/ShortIntro.astro'
-import Skills from '@components/home/Skills.astro'
+import Layout from '@layouts/Layout.astro';
+import ShortIntro from '@components/home/ShortIntro.astro';
+import Skills from '@components/home/Skills.astro';
 
-const title = 'Kalyan Jyoti Borah'
-const description = "The Homepage of Kalyan Jyoti Borah's Portfolio"
-const permalink = ''
-const ograph = ''
+const title = 'Kalyan Jyoti Borah';
+const description = "The Homepage of Kalyan Jyoti Borah's Portfolio";
+const permalink = '';
+const ograph = '';
 ---
 
-<Layout {title} {description} {permalink} {ograph}>
+<Layout
+  {title}
+  {description}
+  {permalink}
+  {ograph}
+>
+  <!-- Google tag (gtag.js) -->
+  <script
+    async
+    src='https://www.googletagmanager.com/gtag/js?id=G-PK4HB89SDH'
+  ></script>
+  <script is:inline>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
 
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PK4HB89SDH"></script>
-    <script is:inline>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      
-      gtag('config', 'G-PK4HB89SDH');
-    </script>
+    gtag('config', 'G-PK4HB89SDH');
+  </script>
 
-    <section class="relative overflow-hidden h-screen">
+  <section class='relative overflow-hidden h-screen'>
     <div
-      class="h-[calc(100dvh-4.75rem)] grid items-center justify-center w-[80%] m-auto pt-[4.75rem]"
+      class='h-[calc(100dvh-4.75rem)] grid items-center justify-center w-[80%] m-auto pt-[4.75rem]'
     >
       <h1
-        class="z-[80] flex flex-col my-24 md:m-auto w-full justify-center text-left font-intro text-4xl shadow-slate-500 font-bold md:text-6xl"
+        class='z-[80] flex flex-col my-24 md:m-auto w-full justify-center text-left font-intro text-4xl shadow-slate-500 font-bold md:text-6xl'
       >
         <span
-          class="text-left text-gray-100 drop-shadow-[0_1.2px_1.2px_rgba(0,0,0,0.8)]"
+          class='text-left text-gray-100 drop-shadow-[0_1.2px_1.2px_rgba(0,0,0,0.8)]'
           >Building Tomorrow's World</span
         >
         <span
-          class="text-left text-gray-100 drop-shadow-[0_1.2px_1.2px_rgba(0,0,0,0.8)]"
+          class='text-left text-gray-100 drop-shadow-[0_1.2px_1.2px_rgba(0,0,0,0.8)]'
         >
           with Today's Code:</span
         >
         <span
-          class="text-left text-gray-400 drop-shadow-[0_1.2px_1.2px_rgba(0,0,0,0.8)] pt-3 text-2xl md:text-3xl"
+          class='text-left animate-scale-in-hor-center text-gray-400 drop-shadow-[0_1.2px_1.2px_rgba(0,0,0,0.8)] pt-3 text-2xl md:text-3xl'
           >A Programmer's Showcase</span
         >
       </h1>
@@ -49,83 +58,7 @@ const ograph = ''
     >
       <i class="fa-solid fa-angles-down fa-bounce fa-xl"></i>
     </a> -->
-    <div class="cube"></div>
-    <div class="cube"></div>
-    <div class="cube"></div>
-    <div class="cube"></div>
-    <div class="cube"></div>
-    <div class="cube"></div>
   </section>
   <ShortIntro />
   <Skills />
 </Layout>
-
-<style>
-  .cube {
-    position: absolute;
-    top: 80vh;
-    left: 45vw;
-    width: 10px;
-    height: 10px;
-    border: solid 1px #003298;
-    transform-origin: top left;
-    transform: scale(0) rotate(0deg) translate(-50%, -50%);
-    -webkit-animation: cube 12s ease-in forwards infinite;
-    animation: cube 12s ease-in forwards infinite;
-  }
-  .cube:nth-child(2n) {
-    border-color: #0051f4;
-  }
-  .cube:nth-child(2) {
-    -webkit-animation-delay: 2s;
-    animation-delay: 2s;
-    left: 25vw;
-    top: 40vh;
-  }
-  .cube:nth-child(3) {
-    -webkit-animation-delay: 4s;
-    animation-delay: 4s;
-    left: 75vw;
-    top: 50vh;
-  }
-  .cube:nth-child(4) {
-    -webkit-animation-delay: 6s;
-    animation-delay: 6s;
-    left: 90vw;
-    top: 10vh;
-  }
-  .cube:nth-child(5) {
-    -webkit-animation-delay: 8s;
-    animation-delay: 8s;
-    left: 10vw;
-    top: 85vh;
-  }
-  .cube:nth-child(6) {
-    -webkit-animation-delay: 10s;
-    animation-delay: 10s;
-    left: 50vw;
-    top: 10vh;
-  }
-
-  @-webkit-keyframes cube {
-    from {
-      transform: scale(0) rotate(0deg) translate(-50%, -50%);
-      opacity: 1;
-    }
-    to {
-      transform: scale(20) rotate(960deg) translate(-50%, -50%);
-      opacity: 0;
-    }
-  }
-
-  @keyframes cube {
-    from {
-      transform: scale(0) rotate(0deg) translate(-50%, -50%);
-      opacity: 1;
-    }
-    to {
-      transform: scale(20) rotate(960deg) translate(-50%, -50%);
-      opacity: 0;
-    }
-  }
-</style>
